# crypto_bitget

./: Cargo.toml  README.md  config.example.toml
examples/: basic.rs  ma_strategy.rs  trade.rs  with_web.rs
src/: lib.rs  logger.rs
src/exchange/: mod.rs
src/exchange/bitget/: mod.rs  rest.rs  signing.rs  subscription.rs  types.rs  ws.rs
src/web/: html.rs  mod.rs  server.rs
