[package]
name = "crypto-bitget"
version = "1.0.0"
edition = "2021"
description = "Bitget v2 交易所框架 + Web 监控面板"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
chrono = "0.4"
colored = "2"

# 加密签名
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Web 服务
axum = { version = "0.7", features = ["ws"] }

# 工具
anyhow = "1"
rand = "0.8"
parking_lot = "0.12"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
